[package]
name = "roers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive", "wrap_help"] }
grangers = { git = "https://github.com/COMBINE-lab/grangers.git", branch="dev" }
polars = { version = "0.29", features = ["lazy","dataframe_arithmetic","sort_multiple", "checked_arithmetic","rows","dtype-struct", "dtype-categorical", "list_eval","concat_str", "strings"]}
peak_alloc = "0.2.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
noodles = { version = "0.37.0", features = ["fasta"] }
